# pmbb

./: .gitignore  README.md  deno.json
.github/workflows/: ci.yml
pmbb-ec/: Cargo.toml  README.md  build.rs
pmbb-ec/src/: main.rs
pmbb-ec/src/ec/: c1.rs  c2.rs  err.rs  mod.rs  t.rs  util.rs
pmbb-ec/test-data/20240731-ec-rs/: .gitignore  4.ec  5.ec  sha256sum.txt
src/bb/: box.ts  conf.ts  file.ts  log.ts  mod.ts  read.ts  run.ts  size.ts  t.ts  time.ts  util.ts
src/bb/iso/: parse.ts
tar-sha256/: Cargo.toml  README.md  build.rs
tar-sha256/src/: bin.rs  calc.rs  main.rs
