[package]
name = "tar-sha256"
version = "0.1.0-a2"
edition = "2021"
license = "MIT"

authors = ["secext2022 <secext2022@outlook.com>"]
description = "Calculate sha256 of files in tar (like sha256sum)"
repository = "https://github.com/fm-elpac/pmbb"
keywords = ["tar", "sha256"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
pm-bin = "^0.1.0-a1"

tar = "^0.4.41"
sha2 = "^0.10.8"
base16ct = "^0.2.0"

[build-dependencies]
pm-bin = { version = "^0.1.0-a1", features = ["build"] }

[features]
default = ["base16ct/alloc"]
